# larm_moutarde

./: README.md  frames.gv  voix_off.md
beginner_tutorials/: package.xml
beginner_tutorials/launch/: turtlemimic.launch
groupe-moutarde/: CMakeLists.txt  package.xml  training.py
grp-moutarde/: CMakeLists.txt  package.xml
grp-moutarde/launch/: challenge3_simulation.launch  challenge3_tbot.launch  config_ch3.rviz  config_move_to.rviz  simu.launch  test.launch  test_tbot_explore_lite.launch
grp-moutarde/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
grp-moutarde/scripts/: bottle_detector.py  cascade1_c.xml  cascade2_c.xml  explorer2.py  training.py
grp-moutarde/src/: base_local_planner_params.yaml  costmap.yaml  costmap_common_params.yaml  costmap_sim.yaml  global_costmap_params.yaml  local_costmap_params.yaml
grp-moutarde/src/launch/: challenge1_simulation.launch  challenge2.launch  challenge3.launch  challenge3_simulation.launch  challenge3_tbot.launch  config_ch2.rviz  config_ch3_sim.rviz  config_move_to.rviz  fichier_rviz.rviz  g_move_to.launch  gmapping_rosbag.launch  move_to.launch  robot.launch
grp-moutarde/src/movebase/: ancien.launch  costmap_common_params.yaml
grp-moutarde/src/scripts/: bottle_detector.py  cascade2_deb.xml  explorer.py  scanop copy.py  scanop.py  training.py
grp-moutarde/srv/: getBottle.srv
move2/: CMakeLists.txt  package.xml
move2/src/: .swp  (+4 more)
move_the_turtlebot/: CMakeLists.txt  package.xml
my_teleop/: package.xml
slam/: CMakeLists.txt  package.xml
tp_vision/: vision.py
(+14 files in other folders)
