<?xml version="1.0"?>
<package format="2">
  <name>grp-moutarde</name>
  <version>1.0.0</version>
  <description>The grp-moutarde package for the challenge 2 of UV-LARM</description>
  <maintainer email="nathanael.lesdalons@etu.imt-nord-europe.fr">Nathanaël Lesdalons</maintainer>
  <maintainer email="maxime.bohrer@etu.imt-nord-europe.fr">Maxime Bohrer</maintainer>
  <license>IMT</license>
  <url type="website">https://github.com/maximebohrer/larm_moutarde/tree/challenge2</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
